add function:right and left clum function(CreatClum())

--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="ja" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>separate news</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/master.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/master.css" />
     <!--<link rel="stylesheet" href="css/responsive.css">-->
     <script type="text/javascript" src="js/SelectNews.js"></script>
   </head>
   <body>
-    <header>
-    </header>
+    <header></header>
     <div id="main">
       <div class="leftclum-wrapper">
         <div class="container">
           <h1>Separate News</h1>
+          <div class="delete_articles"></div>
         </div>
-      </div> <!--End : top-wrapper-->
+      </div>
+      <!--End : top-wrapper-->
       <div class="centerclum-wrapper">
         <div class="container">
-          <div class="works">
-          </div><!--End : works-->
-        </div><!--End : container-->
-      </div> <!--End : works-wrapper-->
+          <div class="works"></div>
+          <!--End : works-->
+        </div>
+        <!--End : container-->
+      </div>
+      <!--End : works-wrapper-->
       <div class="rightclum-wrapper">
         <div class="container">
-          <div class="delete_articles">
-          </div>
-          <input type="button" name="delete_article" value="delete" onClick="WriteAllToNoReadFile()" onfocus="this.blur();">
+          <div class="want_read_articles"></div>
+          <input
+            type="button"
+            name="delete_article"
+            value="既読"
+            onClick="WriteAllToNoReadFile()"
+            onfocus="this.blur();"
+          />
         </div>
       </div>
       <div class="MoveViewPage">
         <div class="arow_box">
-          <img src="src/img/arow.png">
+          <img src="src/img/arow.png" />
         </div>
       </div>
-    </div> <!--End : main-->
-    <footer>
-    </footer>
+    </div>
+    <!--End : main-->
+    <footer></footer>
   </body>
 </html>
