add function: select active clum.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <header></header>
   <div id="main">
-    <div class="leftclum-wrapper">
+    <div class="leftclum-wrapper no-active-clum">
       <div class="container">
         <h1>Separate News</h1>
         <div class="delete_articles"></div>
       </div>
     </div>
     <!--End : top-wrapper-->
-    <div class="centerclum-wrapper">
+    <div class="centerclum-wrapper now-active-clum">
       <div class="container">
         <div class="works"></div>
         <!--End : works-->
@@ -28,7 +28,7 @@
       <!--End : container-->
     </div>
     <!--End : works-wrapper-->
-    <div class="rightclum-wrapper">
+    <div class="rightclum-wrapper no-active-clum">
       <div class="container">
         <div class="want_read_articles"></div>
         <input type="button" name="delete_article" value="既読" onClick="WriteAllToNoReadFile()" onfocus="this.blur();" />
