--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!--End : top-wrapper-->
     <div class="centerclum-wrapper now-active-clum">
       <div class="container">
+        <h1>SROTING NEWS</h1>
         <div class="works"></div>
         <!--End : works-->
       </div>
